--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -139,7 +139,7 @@ img {
   max-width: 739px;
   padding: 5px;
   margin: 10px 0 10px 0;
-  border: 1px solid #ebebeb;
+  border: 0px solid #ebebeb;
 
   box-shadow: 0 0 5px #ebebeb;
   -webkit-box-shadow: 0 0 5px #ebebeb;
@@ -422,4 +422,15 @@ Small Device Styles
     font-size: 11px;
   }
 
+}
+
+/*******************************************************************************
+Trent's additions
+*******************************************************************************/
+
+.logo {
+  width: 100px;
+}
+.city {
+  width: 600px; 
 }
