--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -134,18 +134,18 @@ strong {
 }
 
 img {
-  position: relative;
+  /*position: relative;
   margin: 0 auto;
-  max-width: 739px;
-  padding: 5px;
+  max-width: 739px;*/
+  /*padding: 5px;
   margin: 10px 0 10px 0;
-  border: 0px solid #ebebeb;
+  border: 0px solid #ebebeb;*/
 
-  box-shadow: 0 0 5px #ebebeb;
+  /*box-shadow: 0 0 5px #ebebeb;
   -webkit-box-shadow: 0 0 5px #ebebeb;
   -moz-box-shadow: 0 0 5px #ebebeb;
   -o-box-shadow: 0 0 5px #ebebeb;
-  -ms-box-shadow: 0 0 5px #ebebeb;
+  -ms-box-shadow: 0 0 5px #ebebeb;*/
 }
 
 p img {
