--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -267,7 +267,7 @@ Full-Width Styles
 .inner {
   position: relative;
   max-width: 640px;
-  padding: 20px 10px;
+  /*padding: 20px 10px;*/
   margin: 0 auto;
 }
 
@@ -361,7 +361,7 @@ Full-Width Styles
 }
 
 #main_content {
-  padding-top: 40px;
+  /*padding-top: 40px;*/
 }
 
 #footer_wrap {
@@ -384,8 +384,8 @@ Small Device Styles
   }
 
   .inner {
-    min-width: 320px;
-    max-width: 480px;
+    /*min-width: 320px;
+    max-width: 480px;*/
   }
 
   #project_title {
@@ -429,8 +429,40 @@ Trent's additions
 *******************************************************************************/
 
 .logo {
-  width: 100px;
+  width: 200px;
+}
+.main {
+  height: 400px;
 }
 .city {
-  width: 600px; 
+  /*background-size: cover;*/
+  /*background-size: 100% 100%;*/
+  /*width: 100%;*/
+  /*background-size: cover;*/
+  width: 100%;
+  height: 100%;
+  background: url("../img/city.jpg") no-repeat top center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  border-top: 3px solid white;
+  border-bottom: 3px solid white;
+}
+.email {
+  margin-right: 100px;
+}
+header {
+  margin: 50px 0px 30px 0px;
+  text-align: center;
+}
+footer {
+  padding-top: 30px;
+  color: #ccc;
+  text-align: center;
+  font-size: 130%;
+}
+#main_content {
+  height: 400px;
+  /*background-color: red;*/
 }
