--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -120,10 +120,10 @@ a {
 
 a:hover, a:focus {text-decoration: underline;}
 
-footer a {
+/*footer a {
   color: #F2F2F2;
   text-decoration: underline;
-}
+}*/
 
 em {
   font-style: italic;
@@ -133,19 +133,19 @@ strong {
   font-weight: bold;
 }
 
-img {
-  /*position: relative;
+/*img {
+  position: relative;
   margin: 0 auto;
-  max-width: 739px;*/
-  /*padding: 5px;
+  max-width: 739px;
+  padding: 5px;
   margin: 10px 0 10px 0;
-  border: 0px solid #ebebeb;*/
+  border: 0px solid #ebebeb;
 
-  /*box-shadow: 0 0 5px #ebebeb;
+  box-shadow: 0 0 5px #ebebeb;
   -webkit-box-shadow: 0 0 5px #ebebeb;
   -moz-box-shadow: 0 0 5px #ebebeb;
   -o-box-shadow: 0 0 5px #ebebeb;
-  -ms-box-shadow: 0 0 5px #ebebeb;*/
+  -ms-box-shadow: 0 0 5px #ebebeb;
 }
 
 p img {
@@ -155,7 +155,7 @@ p img {
   vertical-align: middle;
   text-align: center;
   border: none;
-}
+}*/
 
 pre, code {
   width: 100%;
@@ -260,14 +260,14 @@ form {
 Full-Width Styles
 *******************************************************************************/
 
-.outer {
+/*.outer {
   width: 100%;
 }
 
 .inner {
   position: relative;
   max-width: 640px;
-  /*padding: 20px 10px;*/
+  /*padding: 20px 10px;*//*
   margin: 0 auto;
 }
 
@@ -361,12 +361,12 @@ Full-Width Styles
 }
 
 #main_content {
-  /*padding-top: 40px;*/
+  padding-top: 40px;
 }
 
 #footer_wrap {
   background: #212121;
-}
+}*/
 
 
 
@@ -374,7 +374,7 @@ Full-Width Styles
 Small Device Styles
 *******************************************************************************/
 
-@media screen and (max-width: 480px) {
+/*@media screen and (max-width: 480px) {
   body {
     font-size:14px;
   }
@@ -384,8 +384,8 @@ Small Device Styles
   }
 
   .inner {
-    /*min-width: 320px;
-    max-width: 480px;*/
+    min-width: 320px;
+    max-width: 480px;
   }
 
   #project_title {
@@ -422,24 +422,49 @@ Small Device Styles
     font-size: 11px;
   }
 
-}
+}*/
 
 /*******************************************************************************
 Trent's additions
 *******************************************************************************/
 
-.logo {
-  width: 200px;
+.outer {
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
-.main {
-  height: 400px;
+.middle {
+    display: table-cell;
+    vertical-align: middle;
+}
+.inner {
+    margin-left: auto;
+    margin-right: auto; 
+    width: 100%;
+
+    border: 2px solid green;
+}
+
+header {
+  margin: 70px 0px 100px 0px;
+  text-align: center;
+}
+.content {
+  height: 600px;
+}
+footer {
+  padding-top: 100px;
+  padding-bottom: 200px;
+  color: #ccc;
+  text-align: center;
+  font-size: 300%;
+}
+
+.logo {
+  width: 400px;
 }
 .city {
-  /*background-size: cover;*/
-  /*background-size: 100% 100%;*/
-  /*width: 100%;*/
-  /*background-size: cover;*/
-  width: 100%;
   height: 100%;
   background: url("../img/city.jpg") no-repeat top center;
   -webkit-background-size: cover;
@@ -450,19 +475,25 @@ Trent's additions
   border-bottom: 3px solid white;
 }
 .email {
-  margin-right: 100px;
+  display: block;
 }
-header {
-  margin: 70px 0px 50px 0px;
-  text-align: center;
+.phone {
+  display: block;
 }
-footer {
-  padding-top: 50px;
-  color: #ccc;
-  text-align: center;
-  font-size: 130%;
-}
-#main_content {
-  height: 400px;
-  /*background-color: red;*/
+
+/* larger screens */
+@media only screen and (min-width: 768px) {
+  header {
+    margin: 70px 0px 50px 0px;
+  }
+  footer {
+    padding-top: 50px;
+    font-size: 130%;
+  }
+  .logo {
+    width: 200px;
+  }
+  .content {
+    height: 400px;
+  }
 }
