--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,11 @@
+
+/*
+Domain : triariicapital.com
+Password : 2h8ldahtw1f05mul
+Customer service PIN : 1884
+Enom customer service email : GoogleClients@enom.com
+*/
+
 /*******************************************************************************
 Slate Theme for GitHub Pages
 by Jason Costello, @jsncostello
