--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -474,7 +474,7 @@ footer {
 }
 .city {
   height: 100%;
-  background: url("../img/city.jpg") no-repeat top center;
+  background: url("../img/city4_mini.jpg") no-repeat top center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
