--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -497,13 +497,35 @@ footer {
   display: none;
 }
 
-a:link,
-a:visited,
-a:hover,
-a:focus,
-a:active {
+footer a,
+footer a:link,
+footer a:visited,
+footer a:hover,
+footer a:focus,
+footer a:active {
   text-decoration: none;
   color: #ccc;
+}
+
+#attribution {
+  margin-right: 20px;
+  margin-bottom: 10px;
+  text-align: right;
+  /*border: 1px solid blue;*/
+}
+#attribution,
+#attribution a,
+#attribution a:link,
+#attribution a:visited,
+#attribution a:hover,
+#attribution a:focus,
+#attribution a:active {
+  text-decoration: none;
+  color: #666;
+  font-size: 10px;
+}
+#attribution a:hover {
+  text-decoration: underline;
 }
 
 /*@media only screen and (min-width: 768px) {*/
