--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -241,7 +241,7 @@ hr {
   background: url('../images/bg_hr.png') repeat-x center;
 }
 
-table {
+/*table {
   border: 1px solid #373737;
   margin-bottom: 20px;
   text-align: left;
@@ -257,7 +257,7 @@ th {
 td {
   padding: 10px;
   border: 1px solid #373737;
- }
+ }*/
 
 form {
   background: #f2f2f2;
@@ -465,7 +465,7 @@ header {
 .content {
   height: 400px;
 }
-footer {
+.contact {
   padding-top: 50px;
   padding-bottom: 200px;
   color: #ccc;
@@ -497,14 +497,35 @@ footer {
   display: none;
 }
 
-footer a,
-footer a:link,
-footer a:visited,
-footer a:hover,
-footer a:focus,
-footer a:active {
+.contact a,
+.contact a:link,
+.contact a:visited,
+.contact a:hover,
+.contact a:focus,
+.contact a:active {
   text-decoration: none;
   color: #ccc;
+}
+
+.footer {
+  width: 100%;
+  border: 0;
+}
+
+.footer td {
+  padding: 15px;
+}
+
+.footer-nav,
+.footer-nav a {
+  text-align:left;
+  color: #666;
+}
+
+.copyright {
+  margin-left: 30px;
+  color: #666;
+  font-size: 14px;
 }
 
 #attribution {
@@ -522,7 +543,7 @@ footer a:active {
 #attribution a:active {
   text-decoration: none;
   color: #666;
-  font-size: 10px;
+  font-size: 14px;
 }
 #attribution a:hover {
   text-decoration: underline;
@@ -543,7 +564,7 @@ and (max-device-width : 736px) {
   header {
     margin: 70px 0px 100px 0px;
   }
-  footer {
+  .contact {
     padding-top: 100px;
     font-size: 300%;
   }
@@ -554,3 +575,20 @@ and (max-device-width : 736px) {
     height: 600px;
   }
 }
+
+.tos {
+  font-size: 18px;
+  color: #aaa;
+  padding: 20px;
+}
+.tos-inner {
+  max-width: 900px;
+  margin-left:auto;
+  margin-right:auto;
+} 
+.tos h1,
+.tos h2,
+.tos h3 {
+  color: #aaa;  
+}
+
