--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -437,36 +437,56 @@ Trent's additions
 *******************************************************************************/
 
 body {
-  font-family: 'Muli', sans-serif;
+  font-family: 'Vollkorn', sans-serif;
+  background: #212121;
+}
+
+p {
+  word-spacing: 1px;
 }
 
 .outer {
-    display: table;
-    position: absolute;
-    height: 100%;
-    width: 100%;
+  display: table;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 .middle {
-    display: table-cell;
-    vertical-align: middle;
+  display: table-cell;
+  vertical-align: middle;
+
+  /*border: 2px solid red;*/
 }
 .inner {
-    margin-left: auto;
-    margin-right: auto; 
-    width: 100%;
 
-    /*border: 2px solid green;*/
+  background: #212121;
+
+  margin-left: auto;
+  margin-right: auto; 
+  /*width: 100%;*/
+  width: 1024px;
+  height: 100vh;
+
+  /*border: 2px solid green;*/
+
+  margin-top: 0;
+  padding-top: 0;
+
+  min-height: 768px;
+
+  /*border-top: 1px solid white;*/
+  /*border-left: 2px solid white;*/
+  /*border-right: 2px solid white;*/
 }
 
 header {
-  margin: 70px 0px 50px 0px;
+  /*margin: 70px 0px 50px 0px;*/
+  padding-top: 50px;
+  padding-bottom: 40px;
   text-align: center;
 }
-.content {
-  height: 400px;
-}
 .contact {
-  padding-top: 50px;
+  padding-top: 40px;
   padding-bottom: 200px;
   color: #ccc;
   text-align: center;
@@ -476,15 +496,21 @@ header {
 .logo {
   width: 200px;
 }
+.content {
+  height: 359px;
+}
 .city {
   height: 100%;
-  background: url("../img/city4_mini.jpg") no-repeat top center;
+  background: url("../img/city4_cropped3.jpg") no-repeat top center;
+/*  background: url("../img/city4_cropped.jpg") no-repeat top center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  border-top: 3px solid white;
+*/  border-top: 3px solid white;
   border-bottom: 3px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 .email {
   display: block;
@@ -508,8 +534,14 @@ header {
 }
 
 .footer {
-  width: 100%;
+  /*width: 100%;*/
   border: 0;
+
+  margin-left: auto;
+  margin-right: auto; 
+  /*width: 100%;*/
+  width: 900px;
+
 }
 
 .footer td {
@@ -572,7 +604,7 @@ and (max-device-width : 736px) {
     width: 400px;
   }
   .content {
-    height: 600px;
+    /*height: 600px;*/
   }
 }
 
