--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,16 +1,4 @@
 
-/*
-Domain : triariicapital.com
-Password : 2h8ldahtw1f05mul
-Customer service PIN : 1884
-Enom customer service email : GoogleClients@enom.com
-*/
-
-/*******************************************************************************
-Slate Theme for GitHub Pages
-by Jason Costello, @jsncostello
-*******************************************************************************/
-
 @import url(github-light.css);
 
 /*******************************************************************************
@@ -61,22 +49,22 @@ body {
   color:#373737;
   background: #212121;
   font-size: 16px;
-  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+  /*font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;*/
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
-  font-weight: 700;
+  font-weight: 400;
   color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
+  /*font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;*/
   letter-spacing: -1px;
 }
 
 h1 {
   font-size: 36px;
-  font-weight: 700;
+  /*font-weight: 700;*/
 }
 
 h2 {
@@ -128,11 +116,6 @@ a {
 
 a:hover, a:focus {text-decoration: underline;}
 
-/*footer a {
-  color: #F2F2F2;
-  text-decoration: underline;
-}*/
-
 em {
   font-style: italic;
 }
@@ -140,30 +123,6 @@ em {
 strong {
   font-weight: bold;
 }
-
-/*img {
-  position: relative;
-  margin: 0 auto;
-  max-width: 739px;
-  padding: 5px;
-  margin: 10px 0 10px 0;
-  border: 0px solid #ebebeb;
-
-  box-shadow: 0 0 5px #ebebeb;
-  -webkit-box-shadow: 0 0 5px #ebebeb;
-  -moz-box-shadow: 0 0 5px #ebebeb;
-  -o-box-shadow: 0 0 5px #ebebeb;
-  -ms-box-shadow: 0 0 5px #ebebeb;
-}
-
-p img {
-  display: inline;
-  margin: 0;
-  padding: 0;
-  vertical-align: middle;
-  text-align: center;
-  border: none;
-}*/
 
 pre, code {
   width: 100%;
@@ -203,7 +162,6 @@ blockquote {
   border-left: 3px solid #bbb;
 }
 
-
 ul, ol, dl {
   margin-bottom: 15px
 }
@@ -241,286 +199,162 @@ hr {
   background: url('../images/bg_hr.png') repeat-x center;
 }
 
-/*table {
-  border: 1px solid #373737;
-  margin-bottom: 20px;
-  text-align: left;
- }
-
-th {
-  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  padding: 10px;
-  background: #373737;
-  color: #fff;
- }
-
-td {
-  padding: 10px;
-  border: 1px solid #373737;
- }*/
-
 form {
   background: #f2f2f2;
   padding: 20px;
 }
 
 /*******************************************************************************
-Full-Width Styles
+Home Page
 *******************************************************************************/
 
-/*.outer {
-  width: 100%;
+html{
+  height:100%;
 }
-
-.inner {
-  position: relative;
-  max-width: 640px;
-  /*padding: 20px 10px;*//*
-  margin: 0 auto;
-}
-
-#forkme_banner {
-  display: block;
-  position: absolute;
-  top:0;
-  right: 10px;
-  z-index: 10;
-  padding: 10px 50px 10px 10px;
-  color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
-  font-weight: 700;
-  box-shadow: 0 0 10px rgba(0,0,0,.5);
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
-}
-
-#header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
-}
-
-#header_wrap .inner {
-  padding: 50px 10px 30px 10px;
-}
-
-#project_title {
-  margin: 0;
-  color: #fff;
-  font-size: 42px;
-  font-weight: 700;
-  text-shadow: #111 0px 0px 10px;
-}
-
-#project_tagline {
-  color: #fff;
-  font-size: 24px;
-  font-weight: 300;
-  background: none;
-  text-shadow: #111 0px 0px 10px;
-}
-
-#downloads {
-  position: absolute;
-  width: 210px;
-  z-index: 10;
-  bottom: -40px;
-  right: 0;
-  height: 70px;
-  background: url('../images/icon_download.png') no-repeat 0% 90%;
-}
-
-.zip_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
-}
-
-.tar_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom right;
-  margin-left: 10px;
-}
-
-.zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
-}
-
-.tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
-}
-
-#main_content_wrap {
-  background: #f2f2f2;
-  border-top: 1px solid #111;
-  border-bottom: 1px solid #111;
-}
-
-#main_content {
-  padding-top: 40px;
-}
-
-#footer_wrap {
-  background: #212121;
-}*/
-
-
-
-/*******************************************************************************
-Small Device Styles
-*******************************************************************************/
-
-/*@media screen and (max-width: 480px) {
-  body {
-    font-size:14px;
-  }
-
-  #downloads {
-    display: none;
-  }
-
-  .inner {
-    min-width: 320px;
-    max-width: 480px;
-  }
-
-  #project_title {
-  font-size: 32px;
-  }
-
-  h1 {
-    font-size: 28px;
-  }
-
-  h2 {
-    font-size: 24px;
-  }
-
-  h3 {
-    font-size: 21px;
-  }
-
-  h4 {
-    font-size: 18px;
-  }
-
-  h5 {
-    font-size: 14px;
-  }
-
-  h6 {
-    font-size: 12px;
-  }
-
-  code, pre {
-    min-width: 320px;
-    max-width: 480px;
-    font-size: 11px;
-  }
-
-}*/
-
-/*******************************************************************************
-Trent's additions
-*******************************************************************************/
-
-body {
+body{
+  height:100%;
   font-family: 'Vollkorn', sans-serif;
   background: #212121;
+}
+#page{
+  position: relative;
+  /*margin-left:70px;*/
+  height:100%;
+  background:#999;
+  color:#fff;
+}
+#top{
+  background: #212121;
+  text-align:center;
+  height:220px; /* match (1) */
+  vertical-align: middle;
+}
+#top table {
+  width: 100%;
+  height: 100%;
+}
+#top table td {
+  vertical-align: middle;
+  text-align: center;
+}
+#top img {
+  height: 140px;
+}
+#middle{
+  background: #212121;
+  text-align:center;
+  position: absolute;
+  top: 220px; /* match (1) */
+  bottom: 100px; /* match (2) */
+  left: 0;
+  right: 0;
+}
+#bottom{
+  position: absolute;
+  bottom:0;
+  right:0;
+  left:0;
+  background: #212121;
+  text-align:center;
+  height: 100px; /* match (2) */
+
+  border-top: 3px solid white;
+}
+#bottom table {
+  width: 100%;
+  height: 100%;
+}
+#bottom table td {
+  vertical-align: middle;
+  text-align: center;
+}
+
+@media only screen 
+and (max-device-width : 736px)
+and (orientation: portrait) {
+  .contact {
+    font-size: 260%;
+  }
+  .email {
+    display: block;
+  }
+  .phone {
+    display: block;
+    margin-left: 0px;
+  }
+  .contact .email, .contact .phone {
+    width: 100%;
+  }
+  #top img {
+    height: 240px;
+  }
+  #top {
+    height: 450px; /* match (3) */
+  }
+  #middle {
+    top: 450px; /* match (3) */
+    bottom: 300px; /* match (4) */
+  }
+  #bottom {
+    height: 300px; /* match (2) */
+  }
+  .footer {
+    font-size: 24px;
+  }
+}
+
+@media only screen 
+and (max-device-width : 736px)
+and (orientation: landscape) {
+  .contact {
+    font-size: 120%;
+  }
+  .email {
+    display: inline;
+  }
+  .phone {
+    display: inline;
+    margin-left: 100px;
+  }
+  #top img {
+    height: 100px;
+  }
+  #top {
+    height: 150px; /* match (3) */
+  }
+  #middle {
+    top: 150px; /* match (3) */
+    bottom: 100px; /* match (4) */
+  }
+  #bottom {
+    height: 100px; /* match (2) */
+  }
 }
 
 p {
   word-spacing: 1px;
 }
 
-.outer {
-  display: table;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
-.middle {
-  display: table-cell;
-  vertical-align: middle;
-
-  /*border: 2px solid red;*/
-}
-.inner {
-
-  background: #212121;
-
-  margin-left: auto;
-  margin-right: auto; 
-  /*width: 100%;*/
-  width: 1024px;
-  height: 100vh;
-
-  /*border: 2px solid green;*/
-
-  margin-top: 0;
-  padding-top: 0;
-
-  min-height: 768px;
-
-  /*border-top: 1px solid white;*/
-  /*border-left: 2px solid white;*/
-  /*border-right: 2px solid white;*/
-}
-
-header {
-  /*margin: 70px 0px 50px 0px;*/
-  padding-top: 50px;
-  padding-bottom: 40px;
-  text-align: center;
-}
-.contact {
-  padding-top: 40px;
-  padding-bottom: 200px;
-  color: #ccc;
-  text-align: center;
-  font-size: 140%;
-}
-
-.logo {
-  width: 200px;
-}
-.content {
-  height: 359px;
-}
 .city {
   height: 100%;
-  background: url("../img/city4_cropped3.jpg") no-repeat top center;
-/*  background: url("../img/city4_cropped.jpg") no-repeat top center;
+  background: url("../img/city3_cropped1.jpg") no-repeat top center;
+/*  background: url("../img/city4_cropped.jpg") no-repeat top center;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-*/  border-top: 3px solid white;
-  border-bottom: 3px solid white;
-  border-left: 1px solid white;
-  border-right: 1px solid white;
+  
+  border-top: 3px solid white;
+  /*border-bottom: 3px solid white;*/
+  /*border-left: 1px solid white;*/
+  /*border-right: 1px solid white;*/
 }
 .email {
-  display: block;
+  display: inline;
 }
 .phone {
-  display: block;
-}
-
-.mobile {
-  display: none;
+  display: inline;
+  margin-left: 100px;
 }
 
 .contact a,
@@ -534,20 +368,16 @@ header {
 }
 
 .footer {
-  /*width: 100%;*/
+  font-size: 14px;
   border: 0;
-
   margin-left: auto;
   margin-right: auto; 
-  /*width: 100%;*/
-  width: 900px;
+  width: 100%;
 
 }
-
 .footer td {
   padding: 15px;
 }
-
 .footer-nav,
 .footer-nav a {
   text-align:left;
@@ -557,7 +387,7 @@ header {
 .copyright {
   margin-left: 30px;
   color: #666;
-  font-size: 14px;
+  /*font-size: 14px;*/
 }
 
 #attribution {
@@ -575,38 +405,15 @@ header {
 #attribution a:active {
   text-decoration: none;
   color: #666;
-  font-size: 14px;
+  /*font-size: 14px;*/
 }
 #attribution a:hover {
   text-decoration: underline;
 }
 
-/*@media only screen and (min-width: 768px) {*/
-/*@media 
-(-webkit-min-device-pixel-ratio: 2), 
-(min-resolution: 192dpi) { 
-*/
-@media only screen 
-and (max-device-width : 736px) {
-/* iPhone 6+ ----------- */
-/*@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (-webkit-device-pixel-ratio: 2){*/
-  .mobile {
-    display: inline;
-  }
-  header {
-    margin: 70px 0px 100px 0px;
-  }
-  .contact {
-    padding-top: 100px;
-    font-size: 300%;
-  }
-  .logo {
-    width: 400px;
-  }
-  .content {
-    /*height: 600px;*/
-  }
-}
+/*******************************************************************************
+Terms of Service Page
+*******************************************************************************/
 
 .tos {
   font-size: 18px;
@@ -623,4 +430,5 @@ and (max-device-width : 736px) {
 .tos h3 {
   color: #aaa;  
 }
+
 
