--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -208,13 +208,109 @@ form {
 Home Page
 *******************************************************************************/
 
+body {
+  font-family: 'Vollkorn', sans-serif;
+  background: #212121;
+}
+
+p {
+  word-spacing: 1px;
+}
+
+.city {
+  height: 100%;
+  background: url("../img/city3_cropped1.jpg") no-repeat top center;
+/*  background: url("../img/city4_cropped.jpg") no-repeat top center;*/
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  
+  border-top: 3px solid white;
+  /*border-bottom: 3px solid white;*/
+  /*border-left: 1px solid white;*/
+  /*border-right: 1px solid white;*/
+}
+.email {
+  display: inline;
+}
+.phone {
+  display: inline;
+  margin-left: 100px;
+}
+
+.mobile {
+  display: none;
+}
+
+.contact a,
+.contact a:link,
+.contact a:visited,
+.contact a:hover,
+.contact a:focus,
+.contact a:active {
+  text-decoration: none;
+  color: #ccc;
+}
+
+.footer {
+  font-size: 14px;
+  /*width: 100%;*/
+  border: 0;
+
+  margin-left: auto;
+  margin-right: auto; 
+  /*width: 100%;*/
+  width: 100%;
+
+}
+
+.footer td {
+  padding: 15px;
+}
+
+.footer-nav,
+.footer-nav a {
+  text-align:left;
+  color: #666;
+}
+
+.copyright {
+  margin-left: 30px;
+  color: #666;
+  /*font-size: 14px;*/
+}
+
+#attribution {
+  margin-right: 20px;
+  margin-bottom: 10px;
+  text-align: right;
+  /*border: 1px solid blue;*/
+}
+#attribution,
+#attribution a,
+#attribution a:link,
+#attribution a:visited,
+#attribution a:hover,
+#attribution a:focus,
+#attribution a:active {
+  text-decoration: none;
+  color: #666;
+  /*font-size: 14px;*/
+}
+#attribution a:hover {
+  text-decoration: underline;
+}
+
+
+
+
+
 html{
   height:100%;
 }
 body{
   height:100%;
-  font-family: 'Vollkorn', sans-serif;
-  background: #212121;
 }
 #page{
   position: relative;
@@ -331,86 +427,6 @@ and (orientation: landscape) {
   }
 }
 
-p {
-  word-spacing: 1px;
-}
-
-.city {
-  height: 100%;
-  background: url("../img/city3_cropped1.jpg") no-repeat top center;
-/*  background: url("../img/city4_cropped.jpg") no-repeat top center;*/
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  
-  border-top: 3px solid white;
-  /*border-bottom: 3px solid white;*/
-  /*border-left: 1px solid white;*/
-  /*border-right: 1px solid white;*/
-}
-.email {
-  display: inline;
-}
-.phone {
-  display: inline;
-  margin-left: 100px;
-}
-
-.contact a,
-.contact a:link,
-.contact a:visited,
-.contact a:hover,
-.contact a:focus,
-.contact a:active {
-  text-decoration: none;
-  color: #ccc;
-}
-
-.footer {
-  font-size: 14px;
-  border: 0;
-  margin-left: auto;
-  margin-right: auto; 
-  width: 100%;
-
-}
-.footer td {
-  padding: 15px;
-}
-.footer-nav,
-.footer-nav a {
-  text-align:left;
-  color: #666;
-}
-
-.copyright {
-  margin-left: 30px;
-  color: #666;
-  /*font-size: 14px;*/
-}
-
-#attribution {
-  margin-right: 20px;
-  margin-bottom: 10px;
-  text-align: right;
-  /*border: 1px solid blue;*/
-}
-#attribution,
-#attribution a,
-#attribution a:link,
-#attribution a:visited,
-#attribution a:hover,
-#attribution a:focus,
-#attribution a:active {
-  text-decoration: none;
-  color: #666;
-  /*font-size: 14px;*/
-}
-#attribution a:hover {
-  text-decoration: underline;
-}
-
 /*******************************************************************************
 Terms of Service Page
 *******************************************************************************/
@@ -430,5 +446,4 @@ Terms of Service Page
 .tos h3 {
   color: #aaa;  
 }
-
 
